syntax = "proto3";

// Au10 describes Authentic access point interface.
service Au10 {
  // GetProps returns service properties.
  rpc GetProps(PropsRequest) returns (Props);

  // Auth accepts new user credentials, verifies it and sends token as metadata
  // "auth" at success. Each future request has to control it - take this token
  // from metadata "auth" after each response and provide it for the next
  // request.
  rpc Auth(AuthRequest) returns (AuthResponse);
 
  // ReadLog creates log records stream to read.
  rpc ReadLog(LogReadRequest) returns (stream LogRecord);
 
  // ReadPosts creates posts stream to read posts.
  rpc ReadPosts(PostsReadRequest) returns (stream Post);
  // ReadMessage creates a stream to read requested message content.
  rpc ReadMessage(MessageReadRequest) returns (stream MessageChunk);
 
  // AddPost adds new posts into a network. The post will be unpublished until
  // all defined messages will be uploaded.
  rpc AddPost(PostAddRequest) returns (PostAddResponse);
    // MessageChunkWrite writes a part of a message.
  rpc MessageChunkWrite(MessageChunkWriteRequest)
    returns (MessageChunkWriteResponse);
}

// PropsRequest describes properties request.
message PropsRequest {}
// Props describes service properties.
message Props {
  // The maximum number of bytes available for writing to the chunk.
  uint64 maxChunkSize = 1;
}

// AuthRequest describes auth request.
message AuthRequest {
  // User login. Can be empty to get actual allowed method list.
  string login = 1;
}
// AuthResponse describes auth request result.
message AuthResponse {
  // Auth success flag.
  bool isSuccess = 1;
  // Actual allowed method list.
   repeated string methods = 2;
}

// LogRecord describes log record.
message LogRecord {
  // Global sequence number.
  int64 seqNum = 1; 
  // Unix time in nano-seconds.
  int64 time = 2;
  // Text
  string text = 3;
  // Severity returns record severity.
  string severity = 4;
  // Node type name.
  string nodeType = 5;
  // Node instance name.
  string nodeName = 6;
}
// LogReadRequest describes log records stream reading request.
message LogReadRequest {}

// Post describes post entity.
message Post {
  // Type is a post type description.
  enum Type {
    POST = 0;
    VOCAL = 1;
    MOMENT = 2;
  }
  // ID.
  uint64 id = 1;
  // Type.
  Type type = 2;
  // Attached message list.
  repeated Message messages = 3;
}
message Message {
  // Type is a message type description.
  enum Type {
    // Plain text.
    TEXT = 0;
  }
  // ID.
  uint64 id = 1;
  // Type.
  Type type = 2;
  // Size in bytes.
  uint64 size = 3;
}

// PostsReadRequest describes post reading request.
message PostsReadRequest {}

// MessageReadRequest describes message reading request.
message MessageReadRequest {
  // Post ID.
  string postId = 1;
  // Message ID.
  string messageId = 2;
}
// MessageChunk describes message chunk in reading request response.
message MessageChunk {
  // Chunk data.
  bytes chunk = 1;
}

// PostAddRequest describes post adding request.
message PostAddRequest {
  // MessageDeclaration describes a message which will be attached to a post.
  message MessageDeclaration {
    // Message type.
    Message.Type type = 1;
    // Message size in bytes.
    uint64 size = 2;
  }
  // Type.
  Post.Type type = 2;
  // The messages general info in the post.
  repeated MessageDeclaration messages = 1;
}
// PostAddResponse describes post adding request response.
message PostAddResponse {
  // ID of new post.
  string postId = 1;
  // The message ID list, in the same order as was posted.
  repeated string messageIds = 2;
}

// MessageChunkWriteRequest describes request to write part of message content.
message MessageChunkWriteRequest {
  // Post ID.
  string postId = 1;
  // Message ID.
  string messageId = 2;
  // Chunk data. It has to have a size between one byte and
  // PropsResponse.maxChunkSize inclusive.
  bytes chunk = 4;
}
// MessageChunkWriteResponse describes message content writing request response.
message MessageChunkWriteResponse {}